--- a/Inspector/Inspector.vcxproj
+++ b/Inspector/Inspector.vcxproj
@@ -56,7 +56,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>PCL_Static_Dbg.lib;Voltmeter.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>PCL_Static_Dbg.lib;Voltmeter.lib;Calibrator.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
