--- a/Calibrator/Calibrator.vcxproj.filters
+++ b/Calibrator/Calibrator.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Calibrator-COM.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
