--- a/Voltmeter/Voltmeter.vcxproj.filters
+++ b/Voltmeter/Voltmeter.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Voltmeter-COM.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
