--- a/Voltmeter/Voltmeter.vcxproj
+++ b/Voltmeter/Voltmeter.vcxproj
@@ -118,11 +118,17 @@ copy ..\Debug\Voltmeter.lib C:\Projects\Lib</Command>
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\com-support.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Voltmeter.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\com-support.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug-COM|Win32'">false</CompileAsManaged>
