--- a/Voltmeter/Voltmeter.vcxproj.filters
+++ b/Voltmeter/Voltmeter.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Voltmeter.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="..\com-support.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="Voltmeter-COM.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="..\com-support.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
